--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,13 +7,39 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container:
+      image: zmkfirmware/zmk-build-arm:stable
+
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - board: nice_nano_v2
+            shield: corne_left
+          - board: nice_nano_v2
+            shield: corne_right
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Build firmware
-        uses: zmkfirmware/zmk-build-action@v1
+      - name: West Init
+        run: west init -l config
+
+      - name: West Update
+        run: west update
+
+      - name: West Zephyr Export
+        run: west zephyr-export
+
+      - name: Build (${{ matrix.shield }})
+        run: |
+          west build -s zmk/app -b ${{ matrix.board }} \
+            -- -DSHIELD=${{ matrix.shield }} \
+               -DZMK_CONFIG=${GITHUB_WORKSPACE}/config
+
+      - name: Upload firmware
+        uses: actions/upload-artifact@v4
         with:
-          board: nice_nano
-          shield: corne_left corne_right
+          name: firmware-${{ matrix.shield }}
+          path: build/zephyr/zmk.uf2
