--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,8 @@ jobs:
         run: |
           west build -s zmk/app -b ${{ matrix.board }} \
             -- -DSHIELD=${{ matrix.shield }} \
-               -DZMK_CONFIG=${GITHUB_WORKSPACE}/config
+               -DZMK_CONFIG=${GITHUB_WORKSPACE}/config \
+               -DZMK_EXTRA_MODULES=${GITHUB_WORKSPACE}
 
       - name: Upload firmware
         uses: actions/upload-artifact@v4
