--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,21 +7,21 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     container:
-      image: zmkfirmware/zmk-build-arm:stable
+      image: zmkfirmware/zmk-build-arm:3.0
 
     strategy:
       fail-fast: false
       matrix:
         include:
-          - board: nice_nano_v2
+          - board: nice_nano
             shield: corne_left
-          - board: nice_nano_v2
+          - board: nice_nano
             shield: corne_right
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: West Init
         run: west init -l config
@@ -32,11 +32,11 @@ jobs:
       - name: West Zephyr Export
         run: west zephyr-export
 
-      - name: Build (${{ matrix.shield }})
+      - name: Build firmware
         run: |
-          west build -s zmk/app -b ${{ matrix.board }} \
-            -- -DSHIELD=${{ matrix.shield }} \
-               -DZMK_CONFIG=${GITHUB_WORKSPACE}/config \
+          west build -s zmk/app -b ${{ matrix.board }} -- \
+            -DSHIELD=${{ matrix.shield }} \
+            -DZMK_CONFIG=${GITHUB_WORKSPACE}/config
 
       - name: Upload firmware
         uses: actions/upload-artifact@v4
