--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,44 +2,20 @@ name: Build ZMK firmware
 
 on:
   push:
+  pull_request:
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
-    container:
-      image: zmkfirmware/zmk-build-arm:3.0
-
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - board: nice_nano
-            shield: corne_left
-          - board: nice_nano
-            shield: corne_right
-
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: West Init
-        run: west init -l config
-
-      - name: West Update
-        run: west update
-
-      - name: West Zephyr Export
-        run: west zephyr-export
-
-      - name: Build firmware
-        run: |
-          west build -s zmk/app -b ${{ matrix.board }} -- \
-            -DSHIELD=${{ matrix.shield }} \
-            -DZMK_CONFIG=${GITHUB_WORKSPACE}/config
-
-      - name: Upload firmware
-        uses: actions/upload-artifact@v4
+      - name: Build Corne (Nice!Nano v2)
+        uses: zmkfirmware/zmk-build-action@v1
         with:
-          name: firmware-${{ matrix.shield }}
-          path: build/zephyr/zmk.uf2
+          board: nice_nano_v2
+          shield: corne_left corne_right
+          keymap: config/corne.keymap
